# audiobook-studio

./: .gitignore  BUNDLING.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
packaging/: AppIcon.icns  Info.plist  entitlements.plist
packaging/homebrew/: audiobook-studio-app.rb
scripts/: build-app.sh  freeze-sidecar.sh  install-cli.sh  make-icon.sh  package-app-zip.sh  package-cli-tarball.sh  setup-sidecar.sh
sidecar/: g2p_server.py  kokoro_server.py  pyproject.toml  requirements.txt
skills/audiobook-studio/: SKILL.md
src/: agent.rs  api.ts  app.rs  bundle.rs  bundle_env.rs  cover.rs  error.rs  g2p.rs  kokoro.rs  lib.rs  main.rs  main.ts  model.rs  ocr.rs  pdf.rs  pipeline.rs  sidecar.rs  split.rs  styles.css  tts.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  bundle.rs  commands.rs  error.rs  kokoro.rs  lib.rs  main.rs  model.rs  pdf.rs  split.rs
