[package]
name = "audiobook-studio"
version = "0.1.0"
description = "Drop a book PDF, get a chaptered .m4b audiobook — local LLM + Kokoro TTS."
authors = ["Audiobook Studio"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "audiobook-studio"
path = "src/main.rs"

[dependencies]
# Native GUI (immediate-mode). No web layer, no IPC.
eframe = "0.29"
egui = "0.29"
egui-phosphor = "0.7" # Phosphor icon font for egui (named glyph constants)
rfd = "0.15"          # native open-file / pick-folder dialogs

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"

# Local LLM agent orchestration (Rig) + direct Ollama HTTP fallback
rig-core = "0.39"

# PDF text + structure extraction
pdf-extract = "0.9"
lopdf = "0.36"

# Utilities
regex = "1"
unicode-normalization = "0.1"
once_cell = "1"
futures = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
