[package]
name = "audiobook-studio"
version = "0.1.0"
description = "Drop a book PDF, get a chaptered .m4b audiobook — local LLM + Kokoro TTS."
authors = ["Audiobook Studio"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "audiobook_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "2"

# Local LLM agent orchestration (Rig) + direct Ollama HTTP fallback
rig-core = "0.39"

# PDF text + structure extraction
pdf-extract = "0.9"
lopdf = "0.36"

# Utilities
regex = "1"
unicode-normalization = "0.1"
once_cell = "1"
futures = "0.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
